Fix shortcut ambiguity when the search bar is open.

BUG:257298